# raksa

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/: extract-consumption.md
readings/electricity/: electricity_2020-11-30.yaml  electricity_2020-12-31.yaml  electricity_2021-01-31.yaml  electricity_2021-02-28.yaml  electricity_2021-03-31.yaml  electricity_2021-04-30.yaml  electricity_2021-05-31.yaml  electricity_2021-06-30.yaml  electricity_2021-07-31.yaml  electricity_2021-08-31.yaml  electricity_2021-09-30.yaml  electricity_2021-10-31.yaml  electricity_2021-11-30.yaml  electricity_2021-12-31.yaml  electricity_2022-01-31.yaml  electricity_2022-02-28.yaml  electricity_2022-03-31.yaml  electricity_2022-04-30.yaml  electricity_2022-05-31.yaml  electricity_2022-06-30.yaml  electricity_2022-07-31.yaml  electricity_2022-08-31.yaml  electricity_2022-09-30.yaml  electricity_2022-10-31.yaml  electricity_2022-11-30.yaml  electricity_2022-12-31.yaml  electricity_2023-01-31.yaml  electricity_2023-02-28.yaml  electricity_2023-03-31.yaml  electricity_2023-04-30.yaml  electricity_2023-05-31.yaml  electricity_2023-06-30.yaml  electricity_2023-07-31.yaml  electricity_2023-08-31.yaml  electricity_2023-09-30.yaml  electricity_2023-10-31.yaml  electricity_2023-11-30.yaml  electricity_2023-12-31.yaml  electricity_2024-01-31.yaml  (+24 more)
tests/: conftest.py  test_api_live.py  test_client.py  test_config.py  test_import_faults.py  test_import_renovations.py  test_meters_zaptec.py  test_models.py  test_premis_invoices.py
(+193 files in other folders)
