[project]
name = "raksa"
version = "0.1.0"
description = "CLI tool for housing company management systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
    "typer>=0.15",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
raksa = "raksa.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raksa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "submit: tests that write to the live API (run with: pytest -m submit)",
]
addopts = "-m 'not submit'"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
